/*
 * (#)build.gradle  0.1.0   07/03/2026
 *
 * @author   Jonathan Parker
 * @version  0.1.0
 * @since    0.1.0
 *
 * MIT License
 *
 * Copyright (c) 2026 Jonathan M. Parker
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

/*
 * The following system property must be set in HOME/.gradle/gradle.properties:
 *   systemProp.macosArchitecture=silicon
 *
 * Pass command line arguments to the Java program as follows:
 *   gradle <JavaExec Task> --args="arg1 arg2 arg3"
 *
 */

plugins {
	id 'java'
	id 'net.jmp.gradle.plugin.projectinfo-info'	version '0.3.0'

    alias(libs.plugins.errorprone) apply false
}

ext {
	project.group = 'net.jmp.demo.glassfish.ear'
	project.version = "${appVersion}"
	project.description = 'to demonstrate a basic EAR application running Glassfish 8'
}

repositories {
	mavenLocal()
}

allprojects {
    configurations {
        mockitoAgent {
            transitive = false
        }
    }
}

subprojects {
    version = "${appVersion}"

    apply plugin: 'java'
    apply plugin: 'net.ltgt.errorprone'

    repositories {
        mavenCentral()
        mavenLocal()
    }

    dependencies {
        compileOnly libs.jakarta.jakartaee.api
        compileOnly libs.org.jspecify.jspecify
        compileOnly libs.bundles.logging

        errorprone  libs.errorprone.core
        errorprone  libs.nullaway

        testImplementation	libs.bundles.testing
        testImplementation	libs.jakarta.jakartaee.api

        mockitoAgent 		libs.org.mockito.mockito.core

        testRuntimeOnly		libs.ch.qos.logback.logback.classic
        testRuntimeOnly		libs.org.glassfish.expressly.expressly
        testRuntimeOnly		'org.junit.platform:junit-platform-launcher'
    }

    tasks.compileJava {
        options.forkOptions.jvmArgs = ["-Xmx8192m", "--enable-native-access=ALL-UNNAMED"]
        options.release.set(25)
        options.errorprone {
            enabled = true
            check("NullAway", net.ltgt.gradle.errorprone.CheckSeverity.ERROR)
            option("NullAway:AnnotatedPackages", "net.jmp.demo.glassfish")
        }
    }

    tasks.compileTestJava {
        options.errorprone {
            enabled = true
            check("NullAway", net.ltgt.gradle.errorprone.CheckSeverity.OFF)
        }
    }

    tasks.test {
        useJUnitPlatform()

        // Register a cache-compliant provider for JVM arguments

        jvmArgumentProviders.add(new CommandLineArgumentProvider() {
            @InputFiles
            @PathSensitive(PathSensitivity.RELATIVE)
            FileCollection agentFiles = configurations.mockitoAgent

            @Override
            Iterable<String> asArguments() {
                if (agentFiles.isEmpty()) {
                    return []
                }

                return ["-javaagent:${agentFiles.singleFile.absolutePath}"]
            }
        })
    }
}

java.sourceCompatibility = JavaVersion.VERSION_25

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}
